--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 bin/
+gen/
 .settings/
+.classpath
+.project
+examples/.classpath
+examples/.project
+examples/proguard-project.txt
+proguard-project.txt
