--- a/examples/AndroidManifest.xml
+++ b/examples/AndroidManifest.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mantz_it.hackrf_test"
-    android:versionCode="5"
-    android:versionName="1.05" >
+    android:versionCode="6"
+    android:versionName="1.06" >
 
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
     
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_LOGS" />
 
     <application
         android:allowBackup="true"
