--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mantz_it.hackrf_android"
-    android:versionCode="11"
-    android:versionName="1.11" >
+    package="com.mantz_it.hackrf_android" >
 
     <uses-sdk
         android:minSdkVersion="12"
