--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,15 @@
-apply plugin: 'com.android.library'
+plugins {
+    alias(libs.plugins.android.library)
+}
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "25.0.2"
+    namespace 'com.mantz_it.hackrf_android'
+    compileSdk 34
 
     defaultConfig {
-        minSdkVersion 12
-        targetSdkVersion 25
-        versionCode 12
-        versionName "1.12"
+        minSdk 28
+        versionCode 13
+        versionName "1.13"
     }
 
     buildTypes {
@@ -17,4 +18,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
+}
+
+dependencies {
+    implementation libs.appcompat
 }
