--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,4 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.2'
-    }
-}
-
-allprojects {
-    repositories {
-        jcenter()
-    }
+plugins {
+    alias(libs.plugins.android.library) apply false
 }
